src/test/deca/syntax/valid/objet/ClassWithExtends2.deca
class A{
    int x;
    int y;
}
class B extends A{
    A a= new A();
    int b=A.x;
    int c=A.y;
}