src/test/deca/syntax/invalid/objet/BadExtends2.deca
class A extends A extends A{
    int x;
    int y;
}
{
    A a = new A();
    a.x;
    a.y;
}